[tool.poetry]
name = "pyclient"
version = "0.1.0"
description = ""
authors = ["Ben <benjyc@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
websockets = ">=9.0,<12.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
