[tool.poetry]
name = "pyclient"
version = "0.1.0"
description = ""
authors = ["Ben <benjyc@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
websockets = ">=9.0,<12.0"
toml = "^0.10.2"
solana = "^0.34.2"
colored = "^2.2.4"
base58 = "^2.1.1"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
matplotlib = "^3.9.1"
mplfinance = "^0.12.10b0"
tzlocal = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
